# lpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  FEATURE_STATUS.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_COMPLETION_REPORT.md  README.md  build.sh  test_all_101_features.lpp  test_all_features.lpp  test_all_features.lpp.cpp  test_autopattern.lpp  test_autopattern.lpp.cpp  test_complete_features.lpp  test_complete_features.lpp.cpp  test_errors.lpp  test_final_complete.lpp  test_functional_validation.lpp  test_functional_validation.lpp.cpp  test_generic_call.lpp  test_generic_call.lpp.cpp  test_golfed.lpp  test_golfed.lpp.cpp  test_golfed_validation.lpp  test_golfed_validation.lpp.cpp  test_golfed_var.lpp  test_golfed_var.lpp.cpp  test_if_only.lpp  test_if_only.lpp.cpp  test_imperative_validation.lpp  test_imperative_validation.lpp.cpp  test_implicit2.lpp  test_implicit2.lpp.cpp  test_implicit3.lpp  test_implicit3.lpp.cpp  test_implicit4.lpp  test_implicit_return.lpp  (+25 more)
.github/: copilot-instructions.md
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  AUTOPATTERN_QUICK_REFERENCE.md  BUG_FIXES.md  BUG_FIXES_ITERATION_10.md  BUG_FIXES_ITERATION_11.md  BUG_FIXES_ITERATION_12.md  BUG_FIXES_ITERATION_4.md  BUG_FIXES_ITERATION_5.md  BUG_FIXES_ITERATION_6.md  BUG_FIXES_ITERATION_7.md  BUG_FIXES_ITERATION_9.md  COMPLETE_PATTERN_CATALOG.md  CONCURRENCY_BUGS_FINAL.md  DESIGN_PATTERNS.md  ES6_FEATURES.md  FP_PATTERNS_CATALOG.md  FULL_SPEC.md  GOLF_SYNTAX.md  ITERATION_5_SUMMARY.md  ITERATION_6_SUMMARY.md  ITERATION_7_SUMMARY.md  MOLECULE_FEATURE.md  (+7 more)
(+149 files in other folders)
